--- a/src/components/DataInsert.css
+++ b/src/components/DataInsert.css
@@ -1,21 +1,35 @@
 #data-insert {
-   display: flex;
-   flex-direction: column;
+   height: 100%;
+   overflow: hidden;
 }
 
 .custom-table {
-   flex: 1 1 auto;
-   margin: 0;
+   display: flex;
+   flex-direction: column;
+   height: 80%;
 }
 
-.title-insert th {
-   padding: 0 1.2em 0 1.2em;
-   margin: 0;
+.table-head {
+   padding: 0 1em 0 1em;
+}
+
+.table-head span {
+   display: inline-block;
+   width: 50%; 
+   user-select: none;
+}
+
+.table-elements {
+   flex: 1 1;
+   display: inline-block;
+   padding: 0 1em 0 1em;
+   overflow-y: auto;
 }
 
 .buttons {
    position: relative;
    bottom: 0;
+   height: 20%;
 }
 
 .buttons button {
